<resources>
    <string name="app_name">News App1</string>
    <string name="section_name">Section_Name</string>
    <string name="webpublicationdate">webPublicationDate</string>
    <string name="webpublicationtime">webPublicationTime</string>
    <string name="web_title">Web_Title</string>
    <string name="web_url">Web_Url</string>
    <string name="no_news_found">No News Found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="author">author</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="content_preference">contentpreference</string>
    <string name="order_by_preference">orderByPreference</string>
</resources>
